--- a/example/content/root.html
+++ b/example/content/root.html
@@ -4,24 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <style>
-    body {
-      font-family: Arial;
-      text-align: center;
-    }
-
-    hr {
-      width: 200px;
-      margin: auto;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
   
   {{ insert("head") }}
 </head>
 
 <body>
-  {{ insert("body") }}
+  <main>
+    {{ insert("body") }}
+  </main>
 </body>
 
 </html>
