Fixed incorrect variable name in testcases

--- a/stuart-core/src/tests/testcases/excerpt/in.html
+++ b/stuart-core/src/tests/testcases/excerpt/in.html
@@ -1,11 +1,11 @@
 {{ begin("main") }}
 <ul>
-{{ for($post, "posts/", sortby=$post.name, order="asc") }}
+{{ for($post, "posts/", sortby=$post.title, order="asc") }}
 <li>{{ excerpt($post.content, 5) }}</li>
 {{ end(for) }}
 </ul>
 <ul>
-{{ for($post, "posts/", sortby=$post.name, order="asc") }}
+{{ for($post, "posts/", sortby=$post.title, order="asc") }}
 <li>{{ excerpt($post.content, 100) }}</li>
 {{ end(for) }}
 </ul>
