--- a/stuart-core/src/tests/testcases/dateformat/in.html
+++ b/stuart-core/src/tests/testcases/dateformat/in.html
@@ -1,6 +1,6 @@
 {{ begin("main") }}
 <ul>
-{{ for($post, "posts/", sortby=$post.name, order="asc") }}
+{{ for($post, "posts/", sortby=$post.title, order="asc") }}
 <li>{{ $post.title }} was posted on a {{ dateformat($post.date, "%A") }}</li>
 {{ end(for) }}
 </ul>
