--- a/stuart-core/src/tests/testcases/ifdefined/out.html
+++ b/stuart-core/src/tests/testcases/ifdefined/out.html
@@ -1,7 +1,9 @@
 <html>
 <body>
 <ul>
+<li>United Kingdom does not celebrate an independence day.</li>
 <li>United States gained independence on July 4th, 1776.</li>
+<li>Japan does not celebrate an independence day.</li>
 </ul>
 </body>
 </html>
